Ioannis dev temp (#44)
* last update before goal region

* targets to compile moveit from source

* targets to compile moveit from source

* missing depen. for moveit

* missing target

* missing target

* missing target

* missing target

* missing target

* missing target

* Fix target srdfdom for Noetic

* targets for moveit dependencies

* targets for moveit dependencies

* targets for moveit dependencies

* targets for moveit

* targets for moveit

* new branch for goal regions

* choosing the correct branchof moveit,moveit_msgs and panda_moveit for goal region

* delete coppeliasim and many dependencies

* [Add]: shared autonomy manipulator package

* new package names and added desktop bringup for rviz

* added / for subdirectory

* removed / for git sub-dir

* git cached cleared

* all 4 fsa targets

* updated branches for agr

* updating goal region branch (#37)

* Added new version of realsense gazebo plugin

* add: repo

* added necessary targets for stretch 2 robot

* added dependecies for stretch2 robot

* Remove unnecessary targets stretch_2

* feat: om hw deps

* returning to system packages for franka

* [Add]: new dependecies and updated stretch2 packages

* [Add]: new packages needed for Stretch2 simulation

* Initial commit

* [add]: new stretch repositories

* [fix]: cleaned test_stretch2 repos

* [fix]: version in test_stretch2 dependecies

* fix: source absl make

* fix: not source

* [fix]: remove unwanted dependecies

* feat: social nav sims

* Changes in targets to support ros2 installation

* target deleted by mistake

* Adding missing target for python-lxml

* Update install.yaml

* chore: py dep missing

* fix: missing py dep

---------

Co-authored-by: Samuel <samuelmillannorman123@gmail.com>
Co-authored-by: Juan D. Hernández Vega <36008274+juandhv@users.noreply.github.com>
Co-authored-by: Juan D. Hernandez <HernandezVegaJ@cardiff.ac.u

--- a/ros-angles/install.yaml
+++ b/ros-angles/install.yaml
@@ -1,4 +1,9 @@
 - type: ros
-  source:
-    type: system
-    name: geometry
+  humble:
+    source:
+      type: system
+      name: angles
+  default:
+    source:
+      type: system
+      name: geometry
