--- a/ros-moveit_commander/install.yaml
+++ b/ros-moveit_commander/install.yaml
@@ -1,4 +1,11 @@
 - type: ros
-  source:
-    type: system
-    name: moveit-commander
+  humble:
+    source:
+      # depends on ros-humble-ros-testing
+      type: git
+      url: https://github.com/PickNikRobotics/rosparam_shortcuts.git
+      version: ros2
+  default:
+    source:
+      type: system
+      name: rosparam-shortcuts
