--- a/ros-franka_gripper/install.yaml
+++ b/ros-franka_gripper/install.yaml
@@ -1,4 +1,10 @@
 - type: ros
-  source:
-    type: system
-    name: franka-gripper
+  humble:
+    source:
+      type: git
+      url: https://github.com/CardiffUniversityComputationalRobotics/franka_ros2.git
+      sub-dir: franka_gripper
+  default:
+    source:
+      type: system
+      name: franka-gripper
