--- a/ros-libfranka/install.yaml
+++ b/ros-libfranka/install.yaml
@@ -1,4 +1,10 @@
 - type: ros
-  source:
-    type: system
-    name: libfranka
+  humble:
+    source:
+      type: git
+      url: https://github.com/frankaemika/libfranka.git
+      version: 0.13.3
+  default:
+    source:
+      type: system
+      name: libfranka
