--- a/ros-moveit_visual_tools/install.yaml
+++ b/ros-moveit_visual_tools/install.yaml
@@ -1,4 +1,10 @@
 - type: ros
-  source:
-    type: system
-    name: moveit-visual-tools
+  humble:
+    source:
+      type: git
+      url: https://github.com/ros-planning/moveit_visual_tools.git
+      version: ros2
+  default:
+    source:
+      type: system
+      name: moveit-visual-tools
