--- a/ros-pedsim_tf2/install.yaml
+++ b/ros-pedsim_tf2/install.yaml
@@ -3,7 +3,7 @@
     source:
       type: git
       url: git@github.com:CardiffUniversityComputationalRobotics/pedsim_ros.git
-      version: humble-devel
+      version: gz-humble-devel
       sub-dir: pedsim_tf2
   default:
     source:
