--- a/ros-stretch_gz_sim/install.yaml
+++ b/ros-stretch_gz_sim/install.yaml
@@ -1,18 +1,12 @@
 - type: ros
-  noetic:
-    source:
-      type: git
-      url: git@github.com:hello-robot/stretch_ros.git
-      sub-dir: stretch_core
-      version: noetic
   humble:
     source:
       type: git
       url: git@github.com:CardiffUniversityComputationalRobotics/cucr_stretch_ros2.git
-      sub-dir: stretch_core
+      sub-dir: stretch_gz_sim
       version: cucr-humble
   default:
     source:
       type: git
       url: git@github.com:CardiffUniversityComputationalRobotics/cucr_stretch_ros2.git
-      sub-dir: stretch_core
+      sub-dir: stretch_gz_sim
