[ros-ament_cmake_ruff] (TEMP) use fork

--- a/ros-ament_cmake_ruff/install.yaml
+++ b/ros-ament_cmake_ruff/install.yaml
@@ -1,5 +1,6 @@
 - type: ros
   source:
     type: git
-    url: https://github.com/swri-robotics/ament_ruff.git
+    url: https://github.com/MatthijsBurgh/ament_ruff.git
     sub-dir: ament_cmake_ruff
+    version: patch-1
