[ros-kdl_parser_py] use fork

--- a/ros-kdl_parser_py/install.yaml
+++ b/ros-kdl_parser_py/install.yaml
@@ -1,4 +1,5 @@
 - type: ros
   source:
     type: git
-    url: https://github.com/tue-robotics/kdl_parser_py.git
+    url: https://github.com/tue-robotics/kdl_parser.git
+    sub-dir: kdl_parser_py
